# Escultor-3d

./: CMakeLists.txt  README.md  escultor3D  main.cpp
testeDesenhos/: piramide.off  trono.off
